--- a/public/index.html
+++ b/public/index.html
@@ -4,16 +4,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>SAVE THE DATE!</title>
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <title>untitled</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but this website doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but untitled doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-  <div class="row text-center">
-    <h1 class="animate-box">IS THIS ACTUALLY WORKING?</h1>
-  </div>
   </body>
 </html>
